--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
     </script>
 
     <!-- Favicon -->
-
+    <link rel="icon" href="icon.ico"  type="image/x-icon">
     <!-- build:css -->
     <link href="css/style.min.css" rel="stylesheet">
     <!-- endbuild -->
@@ -33,32 +33,34 @@
 
   <main class="main">
 
-      <section class="container">
-          <div class="banner banner-wrap">
-              <div class="banner__wr">
-                  <span>01</span>
-                  <ul class="banner__handle">
-                      <li class="banner__handle-item"></li>
-                      <li class="banner__handle-item"></li>    
-                      <li class="banner__handle-item"></li>     
-                      <li class="banner__handle-item"></li>
-                  </ul>
-              </div>
-              <div class="banner__full">
-                  <h1 class="banner__collection">THE OOH NOO COLLECTION</h1>
-                  <p class="banner__designed-text">Designed in Slovenia</p>
-                  @@include('blocks/button.html', {
-                    "button-text": "EXPLORE NOW",
-                    "class": "button-btn button-btn-js",
-                  })
-                  <!-- <button type="button" class="button-btn button-btn-js">EXPLORE NOW</button>  -->
-              </div>
-              <img class="banner__img" src="./img/monster.png" alt="monster" width="636" height="461">
+      <section class="main-banner">
+          <div class="container container-banner">
+            <div class="banner banner-wrap">
+                <div class="banner__wr">
+                    <span>01</span>
+                    <ul class="banner__handle">
+                        <li class="banner__handle-item"></li>
+                        <li class="banner__handle-item"></li>    
+                        <li class="banner__handle-item"></li>     
+                        <li class="banner__handle-item"></li>
+                    </ul>
+                </div>
+                <div class="banner__full">
+                    <h1 class="banner__collection">THE OOH NOO COLLECTION</h1>
+                    <p class="banner__designed-text">Designed in Slovenia</p>
+                    @@include('blocks/button.html', {
+                      "button-text": "EXPLORE NOW",
+                      "class": "button-btn button-btn-js",
+                    })
+                    <!-- <button type="button" class="button-btn button-btn-js">EXPLORE NOW</button>  -->
+                </div>
+                <img class="banner__img" src="./img/monster.png" alt="monster" width="636" height="461">
+            </div>
+            <p class="banner__title">FREE(CONTINENTAL) USA SHIPPING ON ALL ORDERS OF $100 USD OR MORE!</p>
           </div>
-          <p class="banner__title">FREE(CONTINENTAL) USA SHIPPING ON ALL ORDERS OF $100 USD OR MORE!</p>
       </section>
       <section class="catalog">
-          <div class="container">
+          <div class="container container-catalog">
               <h2 class="catalog__title">CATEGORY PRODUCTS</h2>
               <ul class="catalog__products">
                   <li class="catalog__products-kids"><img class="catalog-kids-img" src="./img/kids.jpg" alt="kids" width="280" height="270">  
@@ -88,7 +90,7 @@
       <section class="delivery">
           <div class="container">
               <div class="delivery__info">
-                  <img class="delivey-img" src="./img/women.png" alt="women" width="480" height="559">
+                  <img class="delivery-img" src="./img/women.png" alt="women" width="480" height="559">
           <div class="delivery__more">
               <h2 class="delivery__text">Delivery</h2>
               <div class="delivery__list">
@@ -142,7 +144,7 @@
                           <p class="info__contacts-title">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
                               <div class="map">
                                  <div id="map-element" class="map__element">
-                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5510575195826!2d49.2880382517228!3d53.512214679916035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879ed1ada6fbd%3A0x751234490b1ca980!2sDirect%20Line%20Digital!5e0!3m2!1sru!2sru!4v1665376044203!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5510575195826!2d49.2880382517228!3d53.512214679916035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879ed1ada6fbd%3A0x751234490b1ca980!2sDirect%20Line%20Digital!5e0!3m2!1sru!2sru!4v1665376044203!5m2!1sru!2sru" width="100%" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
                       </div>
                   </div>
