--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/contactus.css">
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/svg.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>DL Academy</title>
     <meta name="description" content="">
@@ -54,13 +55,13 @@
                     })
                     <!-- <button type="button" class="button-btn button-btn-js">EXPLORE NOW</button>  -->
                 </div>
-                <!-- <img class="banner__img" src="./img/monster.png" alt="monster" width="636" height="461"> -->
-                <picture>
+                <img class="banner__img" src="./img/image/monster.png" alt="monster" width="636" height="461">
+                <!-- <picture>
                   <source class="banner__img" srcset="./img/image/monster.png" type="image/png" max-width="636" max-height="461" media="(min-width:768px)"> 
                   <source class="banner__img" srcset="./img/image/monster292x226.png" type="image/png" media="(min-width:376px)">
                   <source class="banner__img" srcset="./img/image/monster385x286.png" type="image/png" media="(max-width:375px)">
                   <img class="banner__img" src="./img/image/monster.png" alt="monster">
-                </picture>
+                </picture> -->
             </div>
           </div>
           <div class="container">
@@ -199,8 +200,8 @@
   <div class="section-form"> 
     <div class="container-form">
         <div class="form-block">
-            <button class="button__close" type="button"></button>
             @@include('blocks/popup.html')
+            <button class="button__close" type="button"></button>
         </div>
     </div>
 </div>
@@ -210,5 +211,7 @@
 
   <script src="./js/script.js"></script>
     <script src="js/app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
