--- a/source/toys.html
+++ b/source/toys.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="catalog__wrap">
                 <div class="catalog__shark">
-                    <img src="../img/shark.png" alt="shark" width="380" height="385">
+                    <img class="catalog__shark-img" src="../img/shark.png" alt="shark" width="380" height="385">
                     <a class="catalog__shark-learn" href="#">
                         <div class="catalog__shark-learnmore">
                             <p class="catalog__sharktext">LEARN MORE</p>
@@ -98,7 +98,7 @@
                     <p class="catalog__shark-price">$60.00 USD</p>
                 </div>
                 <div class="catalog__brass">
-                    <img src="../img/brass.png" alt="brass" width="380" height="385">
+                    <img class="catalog__brass-img" src="../img/brass.png" alt="brass" width="380" height="385">
                     <a class="catalog__brass-learn" href="#">
                         <div class="catalog__more-brass">
                             <p class="catalog__brasstext">LEARN MORE</p>
@@ -108,7 +108,7 @@
                     <p class="catalog__price-brass">$66.00 USD</p>
                 </div>
             <div class="catalog__cibo">
-                <img src="../img/cibo.png" alt="cibo" width="380" height="385">
+                <img class="catalog__cibo-img" src="../img/cibo.png" alt="cibo" width="380" height="385">
                 <a class="catalog__cibo-learn" href="#">
                     <div class="catalog__more-cibo">
                         <p class="catalog__cibotext">LEARN MORE</p>
@@ -118,7 +118,7 @@
                 <p class="catalog__price-cibo">$60.00 USD</p>
             </div>
             <div class="catalog__machine">
-                <img src="../img/machine.png" alt="machine" width="380" height="385">
+                <img class="catalog__machine-img" src="../img/machine.png" alt="machine" width="380" height="385">
                 <a class="catalog__machine-learn" href="#"> 
                     <div class="catalog__more-machine">
                         <p class="catalog__machine-text">LEARN MORE</p>
@@ -128,7 +128,7 @@
                 <p class="catalog__price-machine">$56.00 USD</p>
             </div>
             <div class="catalog__candle">
-                <img src="../img/candle.png" alt="candle" width="380" height="385">
+                <img class="catalog__candle-img" src="../img/candle.png" alt="candle" width="380" height="385">
                 <a class="catalog__candle-learn" href="#">
                     <div class="catalog__more-candle">
                         <p class="catalog__candle-text">LEARN MORE</p>
@@ -138,7 +138,7 @@
                 <p class="catalog__price-candle">$29.00 USD</p>
             </div>
             <div class="catalog__tangle">
-                <img src="../img/tangle.png" alt="tangle" width="380" height="382">
+                <img class="catalog__tangle-img" src="../img/tangle.png" alt="tangle" width="380" height="382">
                 <a class="catalog__tangle-learn" href="#">
                     <div class="catalog__more-tangle">
                         <p class="catalog__tangle-text">LEARN MORE</p>
